# GNVAE

./: LICENSE  MANIFEST.in  README.md  calculate_latent_variables.py  hyperparam.ini  main.py  pyproject.toml  pyproject.toml.bak
disvae/: evaluate.py  training.py
disvae/models/: decoders.py  encoders.py  losses.py  vae.py
src/gnvae/: calculate_latent_variables.py  latent_variables_to_modules.py  main.py
src/gnvae/disvae/: __init__.py  evaluate.py  training.py
src/gnvae/disvae/models/: decoders.py  discriminator.py  encoders.py  losses.py  vae.py
src/gnvae/disvae/utils/: initialization.py  math.py  modelIO.py
src/gnvae/networks/: __init__.py  cli.py  extract_networks.py  module_extraction.py  utils.py
src/gnvae/utils/: datasets.py  helpers.py  visualize.py  viz_helpers.py
tests/: test_datasets.py
utils/: datasets.py
