[tool.poetry]
name = "gnvae"
version = "0.1.0"
description = "Gene Networks with VAEs (GNVAE) to analyze gene expression data and uncover gene network relationships."
authors = [
    "Apuã Paquola <apua.paquola@libd.org>",
    "Kynon J. M. Benjamin <kj.benjamin90@gmail.com>",
    "Javier Hernandez <JavierHernandez2027@u.northwestern.edu>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/KrotosBenjamin/GNVAE"
repository = "https://github.com/KrotosBenjamin/GNVAE"
packages = [
    { include = "gnvae", from = "src" }
]

include = ["hyperparam.ini"]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "<2.3"
torch = ">=2.7.1"
torchvision = ">=0.22.1"
pandas = ">=2.3.1"
matplotlib = ">=3.10.5"
scikit-learn = ">=1.7.1"
tqdm = ">=4.67.1"
imageio = ">=2.37.0"
scipy = ">=1.16.1"
pillow = ">=11.3.0"
scikit-image = ">=0.25.2"

[tool.poetry.scripts]
gnvae-train = "gnvae.main:cli"
gnvae-calc = "gnvae.calculate_latent_variables:main"
# gnvae-modules = "gnvae.latent_variables_to_modules:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
